--- a/nginx.conf
+++ b/nginx.conf
@@ -1,31 +1,20 @@
-worker_processes  1;
+server {
+    listen 80;
+    server_name _;
 
-events {
-  worker_connections  1024;
-}
+    root /usr/share/nginx/html;
+    index index.html;
 
-http {
-  server {
-    listen 8080;
-    server_name   _;
-
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    include /etc/nginx/mime.types;
-
-    gzip on;
-    gzip_min_length 1000;
-    gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-
-    error_page 404 /404.html;
-    location = /404.html {
-            root /usr/share/nginx/html;
-            internal;
-    }
-
+    # Redirect all routes to index.html
     location / {
-            try_files $uri $uri/index.html =404;
+        try_files $uri /index.html;
     }
-  }
+
+    # Serve static assets directly
+    location /static/ {
+        expires 1y;
+        add_header Cache-Control "public";
+    }
+
+    error_page 404 /index.html;
 }
