--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,19 @@
 server {
     listen 80;
-    server_name _;
+    server_name yourdomain.com;
 
     root /usr/share/nginx/html;
     index index.html;
 
-    # Redirect all routes to index.html
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    # Serve static assets directly
-    location /static/ {
-        expires 1y;
-        add_header Cache-Control "public";
-    }
+    # Optional: Enable gzip compression for better performance
+    gzip on;
+    gzip_min_length 1000;
+    gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-    error_page 404 /index.html;
+    # Optional: Log errors to debug
+    error_log /var/log/nginx/error.log;
 }
