--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_name blog.urssur.com;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -8,11 +9,10 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Optional: Enable gzip compression for better performance
+    error_log /var/log/nginx/error.log debug;
+
+    # Optional: Enable gzip for performance
     gzip on;
     gzip_min_length 1000;
-    gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-
-    # Optional: Log errors to debug
-    error_log /var/log/nginx/error.log;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml;
 }
