aham --- up we go

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name blog.urssur.com;
+    server_name urssur.com;
 
     root /usr/share/nginx/html;
     index index.html;
